Issue #55 Fixing overflow of container by image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -167,8 +167,10 @@ nav.main {
 .thumb-book-cover {
   width: 30px;
   margin-right: 4px;
-  max-height: 25px;
+  max-height: 30px;
   float: left;
+  overflow: hidden;
+  height: 30px;
 }
 .book-description {
   position: relative;
